# EasyTripBusCompany

./: CMakeLists.txt  README.md  main.cpp
src/: Buses.h  Company.h  EventClass.h  Passenger.h  Station.h  TimeSimulation.h  UI.h
src/DataStructures/: LinkedList.h  Node.h  Pri-Queues.h  Queue.h
